CHANGELOG

2.0.69
UTIL:
* type=device | code improvements for actions=sp_spg-create-alert-only-bp/sp_spg-create-bp - reduce duplicate code
* type=rule | improve filters for ruletype=defaultsecurity
* type=overridefinder | improvement of usage message
* type=rule | extend validation for different rule actions and filters

BUGFIX:
* type=ironskillet-update | bugfix to download and store correct default iron-skillet snippets
* type=rule ruletype=defaultsecurity | bugfix to also import defaultSecurityRules, if only one was overwritten
* type=rule | bugfix for 'filter=(hit-count.fast <>!= XYZ)' via Panorama on multiple DG - but different content from FW
* type=diff filter=jsonfile.json | bugfix if include/exclude is not available at file to compare
* type=address-merger | bugfix if object from upperlevel value has /32 but DG object has only IP

GENERAL
* update default iron-skillet snippets
* docker introduce arm container


2.0.68 (20230130)
UTIL:
* type=diff | JSON filter - add also support for "/PATH/entry[@name='*']"
* type=diff | JSON filter file - support now combination of '*' and [text()[contains(.,'TEXT')]]

BUGFIX:
* type=diff | JSON filter file - additional rule order check did not import post rules correctly
* type=diff | bugfix - JSON filter file check not only * | check '*'
* type=rule | ruletype=defaultsecurity | bugfix to display rules | enable more actions related to defaultsecurityRules
* type=html-merger | bugfix for using argument 'adddefaulthtml' if no filename is specified

GENERAL


2.0.67 (20230127)
UTIL:
* type=playbook shadow-json | improved output
* type=application | introduce actions=delete and actions=delete-force
* type=html-merger | adjust helping information
* type=playbook | support reading argument projectfolder from JSON playbook file
* type=zone | actions=exporttoexcel - extend information with ZoneProtectionProfile
* type=rule actions=exporttoexcel:file.html - rename column 'security' to 'security-profile'